conformance/tests/httproute-https-listener.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-https-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
  hostnames:
  - example.org
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-https-test-no-hostname
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-hostname
  rules:
  - backendRefs:
    - name: infra-backend-v2
      port: 8080
